--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,22 @@
-/target/
-/.settings/
-/.classpath
-/.project
-pom.xml.versionsBackup
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# Eclipse
+.settings/
+.classpath
+.project
+bin/
+
+# Misc. Apple II remnants
 *.bin
 *.dsk
+
+# Gradle extras
+.gradle/
+build/
