Gradle tweaks: fix for Oracle javadoc doclint strictness; made the signing task a bit more intelligent.

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -26,6 +26,8 @@ artifacts {
 }
 
 signing {
+    // Only sign if we're uploading...
+    required { gradle.taskGraph.hasTask("uploadArchives") }
     sign configurations.archives
 }
 
