--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
-# Universal applesingle version number.  Used for:
+# Universal bastools version number.  Used for:
 # - Naming JAR file.  
 # - The build will insert this into a file that is read at run time as well.
 version=0.3.0
 
 # Maven Central Repository G and A of GAV coordinate. :-)
 group=net.sf.applecommander
-archivesBaseName=bastokenizer
+archivesBaseName=bastools
