--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 include 'api'
 include 'tools:bt'
 
-rootProject.name = 'bastokenizer'
-project(":api").name = 'bastokenizer-api'
-project(":tools").name = 'bastokenizer-tools'
-project(":tools:bt").name = 'bastokenizer-tools-bt'
+rootProject.name = 'bastools'
+project(":api").name = 'bastools-api'
+project(":tools").name = 'bastools-tools'
+project(":tools:bt").name = 'bastools-tools-bt'
