Early work on shape tools and 'st' command.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,9 @@
 include 'api'
 include 'tools:bt'
+include 'tools:st'
 
 rootProject.name = 'bastools'
 project(":api").name = 'bastools-api'
 project(":tools").name = 'bastools-tools'
 project(":tools:bt").name = 'bastools-tools-bt'
+project(":tools:st").name = 'bastools-tools-st'
