Generate subcommand can now generate a demo disk for shapes. #16.

--- a/.gitignore
+++ b/.gitignore
@@ -14,11 +14,11 @@ gradle-app.setting
 bin/
 
 # Misc. Apple II remnants
-*.bin
-*.dsk
-*.po
-*.do
-*.bas
+/*.bin
+/*.dsk
+/*.po
+/*.do
+/*.bas
 
 # Gradle extras
 .gradle/
