--- a/tools/st/build.gradle
+++ b/tools/st/build.gradle
@@ -22,5 +22,6 @@ bootJar {
 dependencies {
     compile 'info.picocli:picocli:3.0.2'
     compile 'net.sf.applecommander:applesingle-api:1.2.1'
+    compile 'net.sf.applecommander:AppleCommander:1.4.0'
     compile project(':bastools-api')
 }
