--- a/tools/bt/build.gradle
+++ b/tools/bt/build.gradle
@@ -1,12 +1,15 @@
 plugins {
-    id 'org.springframework.boot' version '2.0.2.RELEASE'
+    id 'org.springframework.boot' version "2.7.17"
+    id 'java'
+    id 'application'
 }
+
+sourceCompatibility = 11
+targetCompatibility = 11
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
-
-apply plugin: 'application'
 
 mainClassName = "io.github.applecommander.bastools.tools.bt.Main"
 
