--- a/tools/bt/build.gradle
+++ b/tools/bt/build.gradle
@@ -4,14 +4,18 @@ plugins {
     id 'application'
 }
 
-sourceCompatibility = 11
-targetCompatibility = 11
+java {
+    sourceCompatibility = '11'
+    targetCompatibility = '11'
+}
 
 repositories {
     mavenCentral()
 }
 
-mainClassName = "io.github.applecommander.bastools.tools.bt.Main"
+application {
+    mainClass = "io.github.applecommander.bastools.tools.bt.Main"
+}
 
 bootJar {
   manifest {
