--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # Universal bastools version number.  Used for:
 # - Naming JAR file.  
 # - The build will insert this into a file that is read at run time as well.
-version=0.4.1-SNAPSHOT
+version=0.4.1
 
 # Maven Central Repository G and A of GAV coordinate. :-)
 group=net.sf.applecommander
