--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,17 @@
+plugins {
+  id 'java'
+}
+
+ext {
+  isSnapshotVersion = version.endsWith("SNAPSHOT")
+  isReleaseVersion = !ext.isSnapshotVersion
+}
+
+java {
+  sourceCompatibility = 21
+  targetCompatibility = 21
+}
+
 if (JavaVersion.current().isJava8Compatible()) {
   allprojects {
     tasks.withType(Javadoc).tap {
