--- a/tools/tests/build.gradle
+++ b/tools/tests/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    testImplementation "io.github.a2geek:clth:2.0"
+    testImplementation "io.github.a2geek:clth:$clthVersion"
 }
 
 test {
