--- a/.github/workflows/nativeCompile.yml
+++ b/.github/workflows/nativeCompile.yml
@@ -1,5 +1,16 @@
 name: GraalVM Native Image builds
-on: [push, pull_request]
+
+on:
+  push:
+    branches: [ "main" ]
+    tags:
+      - '*'
+  pull_request:
+    branches: [ "main" ]
+
+permissions:
+  contents: read
+
 jobs:
   build:
     name: bt and st on ${{ matrix.os }}-${{ matrix.arch }}
