Found bug in Key Perfect 5.0. Once a REM was detected... it never got reset. Doh!

--- a/tools/tests/src/test/resources/bt-config.yml
+++ b/tools/tests/src/test/resources/bt-config.yml
@@ -234,4 +234,4 @@ tests:
           -------------   --------
               1 -   160   E11CFC2E
             170 -   260   CF1C6F7F
-          PROGRAM TOTAL
+          PROGRAM TOTAL   D6462CDD
